--- a/src/TheGamersNetworkService/TheGamersNetworkService.csproj
+++ b/src/TheGamersNetworkService/TheGamersNetworkService.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TheGamersNetworkDatabase\TheGamersNetworkDatabase.csproj" />
+  </ItemGroup>
+
 </Project>
