Initial Configuration for xUnit and reference linking

--- a/src/TheGamersNetworkApi/TheGamersNetworkApi.csproj
+++ b/src/TheGamersNetworkApi/TheGamersNetworkApi.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TheGamersNetworkService\TheGamersNetworkService.csproj" />
+    <ProjectReference Include="..\Services\Service.csproj" />
   </ItemGroup>
 
 </Project>
