--- a/src/Services/Service.csproj
+++ b/src/Services/Service.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TheGamersNetworkDatabase\TheGamersNetworkDatabase.csproj" />
+    <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
 </Project>
