Base ConnectionString Setup

--- a/src/TheGamersNetworkApi/appsettings.Development.json
+++ b/src/TheGamersNetworkApi/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DatabaseConnectionString": "server=localhost;user id=developer;password=password_123;database=TheGamersNetwork;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
